# AgentPlane

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
SKILL/: SKILL.md  shared-mode-reference.md
SKILL/agents/: openai.yaml
SKILL/references/: accelerator.md  gateway.md  implementation.md  process-file.md  shared-mode.md  sync.md
src/: cli_client.rs  config.rs  git.rs  lib.rs  main.rs  mode.rs  server.rs
src/cli/: accelerator.rs  file.rs  health.rs  mod.rs  mode.rs  process.rs  process_stream.rs  run.rs  server.rs  sync.rs  sync_session.rs
src/protocol/: accelerator.rs  common.rs  file.rs  mod.rs  mode.rs  process.rs  resource.rs  sync.rs
src/server/: accelerator.rs  auth.rs  error.rs  file.rs  process.rs  util.rs
tests/: accelerator.rs  file.rs  gateway.rs  git_sync.rs  health.rs  mode.rs  process.rs  run.rs  single_mode_lifetime.rs
tests/common/: mod.rs
