[package]
name = "agentplane"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
rcgen = "0.13"
regex = "1.11"
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
uuid = { version = "1.18", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["gzip", "json", "native-tls", "socks"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["gzip", "json", "rustls-tls", "socks"] }

[dev-dependencies]
flate2 = "1.1"
tempfile = "3.20"
